Support Java 17 in `Security637Test` (#6384)